generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum SurveyType {
  case_collection
  assessment
  promotional_document
}

enum SurveyStatus {
  draft
  published
  disabled
}

model AdminUser {
  id           Int      @id @default(autoincrement()) @db.UnsignedInt
  name         String   @db.VarChar(100)
  phone        String   @unique @db.VarChar(20)
  passwordHash String   @map("password_hash") @db.VarChar(255)
  isPrimary    Boolean  @default(false) @map("is_primary")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  createdWhitelists SurveyWhitelist[]
  createdFolders    SurveyFolder[]

  @@map("admin_users")
}

model Contact {
  id         Int      @id @default(autoincrement()) @db.UnsignedInt
  name       String   @unique @db.VarChar(100)
  department String?  @db.VarChar(200)
  jobNo      String?  @map("job_no") @db.VarChar(50)
  position   String?  @db.VarChar(100)
  phone      String   @db.VarChar(20)
  email      String?  @db.VarChar(100)
  tags       String?  @db.VarChar(255)
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  whitelistMembers WhitelistMember[]

  @@map("contacts")
}

model WecomUser {
  id          Int      @id @default(autoincrement()) @db.UnsignedInt
  wecomUserid String   @unique @map("wecom_userid") @db.VarChar(64)
  name        String?  @db.VarChar(100)
  department  String?  @db.VarChar(200)
  createdAt   DateTime @default(now()) @map("created_at")

  @@map("wecom_users")
}

model SurveyFolder {
  id        Int      @id @default(autoincrement()) @db.UnsignedInt
  name      String   @db.VarChar(100)
  createdBy Int      @map("created_by") @db.UnsignedInt
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  admin   AdminUser @relation(fields: [createdBy], references: [id])
  surveys Survey[]

  @@map("survey_folders")
}

model Survey {
  id         Int          @id @default(autoincrement()) @db.UnsignedInt
  title      String       @db.VarChar(200)
  type       SurveyType   @default(assessment)
  schemaJson Json         @map("schema_json")
  status     SurveyStatus @default(draft)
  shareToken String       @unique @map("share_token") @db.VarChar(64)
  isDeleted  Boolean      @default(false) @map("is_deleted")
  createdBy  Int          @map("created_by") @db.UnsignedInt
  folderId   Int?         @map("folder_id") @db.UnsignedInt
  createdAt  DateTime     @default(now()) @map("created_at")
  updatedAt  DateTime     @updatedAt @map("updated_at")

  responses SurveyResponse[]
  whitelist SurveyWhitelist?
  folder    SurveyFolder?    @relation(fields: [folderId], references: [id])

  @@map("surveys")
}

model SurveyWhitelist {
  id        Int      @id @default(autoincrement()) @db.UnsignedInt
  surveyId  Int      @unique @map("survey_id") @db.UnsignedInt
  enabled   Boolean  @default(true)
  createdBy Int      @map("created_by") @db.UnsignedInt
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  survey  Survey            @relation(fields: [surveyId], references: [id])
  creator AdminUser         @relation(fields: [createdBy], references: [id])
  members WhitelistMember[]

  @@map("survey_whitelists")
}

model WhitelistMember {
  id          Int      @id @default(autoincrement()) @db.UnsignedInt
  whitelistId Int      @map("whitelist_id") @db.UnsignedInt
  contactId   Int      @map("contact_id") @db.UnsignedInt
  createdAt   DateTime @default(now()) @map("created_at")

  whitelist SurveyWhitelist @relation(fields: [whitelistId], references: [id], onDelete: Cascade)
  contact   Contact         @relation(fields: [contactId], references: [id])

  @@unique([whitelistId, contactId], map: "uk_wl_contact")
  @@map("whitelist_members")
}

model SurveyResponse {
  id             Int      @id @default(autoincrement()) @db.UnsignedInt
  surveyId       Int      @map("survey_id") @db.UnsignedInt
  wecomUserid    String   @map("wecom_userid") @db.VarChar(64)
  rateeContactId Int?     @map("ratee_contact_id") @db.UnsignedInt
  answersJson    Json     @map("answers_json")
  submittedAt    DateTime @default(now()) @map("submitted_at")

  survey  Survey           @relation(fields: [surveyId], references: [id])
  comment ResponseComment?

  @@map("survey_responses")
}

model ResponseComment {
  id         Int      @id @default(autoincrement()) @db.UnsignedInt
  responseId Int      @unique @map("response_id") @db.UnsignedInt
  adminId    Int      @map("admin_id") @db.UnsignedInt
  comment    String?  @db.Text
  score      Int?     @db.UnsignedTinyInt
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  response SurveyResponse @relation(fields: [responseId], references: [id])

  @@map("response_comments")
}

// ===== 360 环评 =====

model EvalCycle {
  id              Int      @id @default(autoincrement()) @db.UnsignedInt
  name            String   @db.VarChar(200)
  scopeDepartment String?  @map("scope_department") @db.VarChar(200)
  selfSurveyId    Int?     @map("self_survey_id") @db.UnsignedInt
  peerSurveyId    Int?     @map("peer_survey_id") @db.UnsignedInt
  leaderSurveyId  Int?     @map("leader_survey_id") @db.UnsignedInt
  status          String   @default("draft") @db.VarChar(20)
  createdBy       Int      @map("created_by") @db.UnsignedInt
  createdAt       DateTime @default(now()) @map("created_at")
  updatedAt       DateTime @updatedAt @map("updated_at")

  relations EvalRelation[]

  @@map("eval_cycles")
}

model EvalRelation {
  id             Int      @id @default(autoincrement()) @db.UnsignedInt
  cycleId        Int      @map("cycle_id") @db.UnsignedInt
  raterContactId Int      @map("rater_contact_id") @db.UnsignedInt
  rateeContactId Int      @map("ratee_contact_id") @db.UnsignedInt
  relationType   String   @map("relation_type") @db.VarChar(10)
  surveyId       Int      @map("survey_id") @db.UnsignedInt
  source         String   @default("auto") @db.VarChar(10)
  responseId     Int?     @map("response_id") @db.UnsignedInt
  createdAt      DateTime @default(now()) @map("created_at")

  cycle EvalCycle @relation(fields: [cycleId], references: [id], onDelete: Cascade)

  @@unique([cycleId, raterContactId, rateeContactId], map: "uk_cycle_rater_ratee")
  @@map("eval_relations")
}
